syntax = "proto3";

package maximum.industries;

enum Topology {
    SQUARE = 0;
    CYLINDER = 1;
    TORUS = 2;
}

enum Symmetry {
    ROTATE = 0;
    REFLECT = 1;
    NONE = 2;
}

enum MoveSource {
    PIECES_ON_BOARD = 0;
    ENDS = 1;
}

enum Outcome {
    DISALLOWED = 0;
    ALLOWED = 1;
    CAPTURE = 2;
    SWAP = 3;
    STAY = 4;
    DEPLOY = 5;
    IMPRESS = 6;
}

enum Condition {
    NO_LEGAL_MOVE = 0;
    NO_PIECES_ON_BOARD = 1;
    KEY_PIECES_CAPTURED = 2;
    BOARD_FULL = 3;
    N_IN_A_ROW = 4;
    MOVE_LIMIT = 5;
    REPEATED_POSITION = 6;
}

enum GameDecision {
    WIN = 0;
    LOSS = 1;
    DRAW = 3;
    COUNT_LIVE_PIECES = 4;
    COUNT_CAPTURED_PIECES = 5;
}

message MoveOptions {
    Outcome none = 1;
    Outcome own = 2;
    Outcome opponent = 3;
}

message Move {
    repeated string template = 1;
    MoveOptions land = 4;
    MoveOptions jump = 5;
    string exchange = 6;
    uint32 priority = 7;
    bool continue = 8;
}

message Piece {
    string name = 1;
    uint32 count = 2;
    uint32 min = 3;
    repeated string placement = 4;
    repeated Move move = 5;
}

message GameOver {
    Condition condition = 1;
    uint32 param = 2;
    GameDecision decision = 3;
}
message GameSpec {
    string name = 1;
    uint32 board_size = 2;
    Topology board_topology = 3;
    Symmetry board_symmetry = 4;
    MoveSource move_source = 5;
    repeated Piece piece = 6;
    repeated GameOver game_over = 7;
}
